Partially completed Bankinh Microservice

--- a/MicroRabbit/Data/MicroRabbit.Banking.Data/MicroRabbit.Banking.Data.csproj
+++ b/MicroRabbit/Data/MicroRabbit.Banking.Data/MicroRabbit.Banking.Data.csproj
@@ -1,7 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\MicroRabbit.Banking.Domain\MicroRabbit.Banking.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
