--- a/MicroRabbit/Application/MicroRabbit.Banking.Application/MicroRabbit.Banking.Application.csproj
+++ b/MicroRabbit/Application/MicroRabbit.Banking.Application/MicroRabbit.Banking.Application.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\MicroRabbit.Banking.Domain\MicroRabbit.Banking.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
