--- a/MicroRabbit/MicroRabbit.Banking.Data/MicroRabbit.Banking.Data.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Data/MicroRabbit.Banking.Data.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\MicroRabbit.Banking.Domain\MicroRabbit.Banking.Domain.csproj" />
+    <ProjectReference Include="..\MicroRabbit.Banking.Domain\MicroRabbit.Banking.Domain.csproj" />
   </ItemGroup>
 
 </Project>
