--- a/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
+    <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
